--- a/pom.xml
+++ b/pom.xml
@@ -61,7 +61,12 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot</artifactId>
+            <version>1.5.9.RELEASE</version>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
